Fixed img overflow

--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -31,6 +31,7 @@ code {
 
 .container__item img {
   box-shadow: 0 5px 1em rgba(0,0,0,0.3);
+  max-width: 100%;
 }
 
 .container h1 {
